syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/admin_users";
package messages.admin_users;


message UserSwitchSomeStateRequest {
	string user_id = 1;
}

message UsersGetRequest {
	optional string search = 1;
	optional int32 page = 2;
	optional int32 per_page = 3;
	//TODO:	optional bool is_contributor =;
	//TODO:	optional bool is_translator =;
	optional bool is_admin = 4;
	optional bool is_bot_enabled = 5;
	optional bool is_banned = 6;
	repeated string badges_ids = 7;
}

message UsersGetResponse {
	message UsersGetResponseUser {
		string id = 1;
		string user_name = 2;
		string user_display_name = 3;
		string avatar = 4;
		bool is_banned = 5;
		bool is_admin = 7;
		bool is_bot_enabled = 8;
		//TODO: bool is_contributor = ;
		//TODO: bool is_translator =;
	}

	repeated UsersGetResponseUser users = 1;
	int32 total = 2;
}
